package ro.greg.swapestate.core

object TestTags {
    //Auth screen
    const val EMAIL_TAG = "EMAIL_TEST"
    const val PASSWORD_TAG = "PASSWORD_TEST"
    const val INPUT_FIELD_ERROR = "INPUT_FIELD_ERROR"
}